--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,2 +1,2 @@
 <ul>
-  <li *ngFor="let product of products"><a routerLink="/product{{product.id}}" routerLinkActive="active"></a>{{product.albumName}}</li>
+  <li *ngFor="let product of products"><a routerLink="/product{{product.id}}" routerLinkActive="active">{{product.albumName}}</a></li>
